# nutri-genai

./: .gitignore  README.md  pyproject.toml  requirements.txt
app/: dashboard_utils.py  llm_utils.py  main.py  pdf_utils.py
